syntax = "proto3";
package query;

service Query {
    rpc QueryMultiple (ObjectIds) returns (ValueMap);
    rpc QueryBySchema (SchemaId) returns (ValueMap);
    rpc QueryRaw (RawMsg) returns (ValueMap);
}

message ObjectIds {
    repeated string object_ids = 1;
}

message SchemaId {
    string schema_id = 1;
}

message ValueMap {
    map<string, bytes> values = 1;
}

message RawMsg {
    string raw_msg = 1;
}
